--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ ethereum-types = "*"
 serde = { version = "*", features = ["derive"] }
 serde_json = "*"
 serde_with = { version = "*", features = ["hex"] }
+hex = "*"
